--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+            <title>Caitlin's Website</title>
+    </head>
     <body>
         Hi there awesome person!
     </body>
