--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
             <title>Caitlin's Website</title>
     </head>
     <body>
+        <h1>Header!</h1>
         Hi there awesome person!
     </body>
 </html>
