--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     </head>
     <body>
         Hi there awesome person!
+        <img src=https://avatars.githubusercontent.com/u/90869364?v=4>
     </body>
 </html>
