--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-            <title>Caitlin's Website</title>
+         <title>Caitlin's Website</title>
     </head>
     <body>
         Hi there awesome person!
+        <img src=https://avatars.githubusercontent.com/u/90869364?v=4>
     </body>
 </html>
