--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <h1>Header!</h1>
+        Hi there awesome person!
         <img src="https://avatars.githubusercontent.com/u/90869364?v=4">
     </body>
 </html>
