--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
         <h1>Header!</h1>
         Hi there awesome person!
         <img src="https://avatars.githubusercontent.com/u/90869364?v=4">
+        <ol>
+            <li>Aritzia</li>
+            <li>Indigo</li>
+            <li>Disney Plus</li>
+        </ol>
     </body>
 </html>
