--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         Hi there awesome person!
         <img src="https://avatars.githubusercontent.com/u/90869364?v=4">
         <ol>
-            <li>Aritzia</li>
-            <li>Indigo</li>
-            <li>Disney Plus</li>
+            <li><a href="https://www.aritzia.com/en/home">This is a link to Aritzia!</a></li>
+            <li><a href="https://www.chapters.indigo.ca/en-ca/">This is a link to Indigo!</a></li>
+            <li><a href="https://www.disneyplus.com/home">This is a link to Disney Plus!</a></li>
         </ol>
     </body>
 </html>
